# uwu-tray

./: .gitignore  Cargo.toml  README.md  WEADME.md  Weadme.md  build.rs  bundle_macos.sh  license.txt  readme.md
.github/workflows/: build.yml
res/: Info.plist  res.rc  res.xml  uwu.icns
src/: main.rs
