[package]
name = "uwu-tray"
version = "0.1.1"
authors = ["Catherine Gilbert <catherine.gilbert15@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
clipboard = "0.5.0"
tray-item = "0.4.0-alpha"
uwuify    = "0.2.1"

[target.'cfg(target_os="linux")'.dependencies]
gdk  = "0.12.1"
gio  = "0.8.1"
glib = "0.9.3"
gtk  = "0.8"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
