[package]
name = "uwu-tray"
version = "1.0.0"
authors = ["Catherine Gilbert <catherine.gilbert15@gmail.com>"]
edition = "2021"

[dependencies]
tao = "0.31.1"
tray-icon = { version = "0.19.2", default-features = false }
cli-clipboard = "0.4.0"
uwuify = "0.2.2"
anyhow = "1.0.95"
image = "0.25.5"

[target.'cfg(target_os="macos")'.dependencies]
objc2-core-foundation = "0.3.0"